add serilog logging

--- a/RazorPagesLibraryProject/appsettings.json
+++ b/RazorPagesLibraryProject/appsettings.json
@@ -2,6 +2,23 @@
   "ConnectionStrings": {
     "Default": "Server=LAPTOP-E1A9AAD7;Database=LibraryDataBase;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
   },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=LAPTOP-E1A9AAD7;Database=LibraryDataBase;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
